# Entropy

./: .gitignore  Cargo.toml  LICENSE  README.md  admin.md  dockerfile  entropy.toml  item.csv  thunder-collection_Entropy HTTP API.json
bruno/Entropy/: Register.bru  bruno.json  collection.bru  ping.bru
bruno/Entropy/guest/: Arrange.bru  Detect.bru  GetGuest.bru  Harvest.bru  Heat.bru  Walk.bru
bruno/Entropy/node/: GetNode.bru  GetNodeBytes.bru  GetNodeMsgPak.bru
bruno/Entropy/player/: GetPlayer.bru  GetPlayerPub.bru  ListGuest.bru  Player.bru  Register.bru  RegisterPlayer.bru  SpawnGuest.bru  VerifyPlayer.bru
src/: alphabet.rs  api.rs  config.rs  db.rs  err.rs  grid.rs  guest.rs  lib.rs  main.rs  model.c  node.rs  player.rs  scalar.rs  soul.rs  wheel.rs  world.rs
src/api/: error.rs  http.rs  mod.rs  payload.rs  verify.rs  ws.rs
src/api/http/: handler.rs  mod.rs
src/api/socket/: mod.rs
src/api/zmq/: mod.rs
src/component_normal/: mod.rs  pawn.rs
src/entities/: guest.rs  mod.rs  node.rs  player.rs
src/entity/: guest.rs  mod.rs  node.rs  player.rs  prelude.rs  variant.rs
src/model/: guest.rs  mod.rs  node.rs  player.rs
src/props/: concrete.rs  mod.rs  move.rs  position.rs
