[package]
name = "entropy"
version = "2.1.0"
edition = "2021"
description = "Entropy, a game."
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", default-features = false, features = [
    "form",
    "http1",
    "json",
    "matched-path",
    "original-uri",
    "query",
    "tokio",
    "tower-log",
    "tracing",
    "macros",
    "ws",
] }
axum-auth = "0.7.0"
clap = { version = "4.5.7", features = ["derive"] }
ordered-float = "4.2.0"
pg-embed = { git = "https://github.com/faokunega/pg-embed.git" }
rand = { version = "0.8.5", features = ["small_rng"] }
rmp = "0.8.14"
rmp-serde = "1.3.0"
sea-orm = { version = "0.12.15", features = [
    "debug-print",
    "sqlx-postgres",
    "runtime-tokio-rustls",
] }
serde = { version = "1.0.203", features = ["derive"] }
serde_bytes = "0.11.14"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["full"] }
toml = { version = "0.8.14", features = ["parse"] }
tower-http = { version = "0.5.2", features = ["compression-full"] }
tracing = { version = "0.1.40", default-features = false, features = [
    "attributes",
    "max_level_debug",
    "release_max_level_info",
] }
tracing-subscriber = "0.3.18"
url = "2.5.1"
